# openconditions

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSING.md  README.md  SECURITY.md  SUPPORT.md  commitlint.config.mjs  eslint.config.js  extension.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  (+1 more)
.husky/: pre-commit  pre-push
docs/: archive.md  commons-substrate.md  crowd-reporting-limitations.md  datex-conformance.md  federation-gdpr.md  federation-onboarding.md  probe-p1-feasibility-spike.md  probe-p1-prior-art-desk-read.md  road-feed-credentials.md  speed-coverage.md  sybil-colocation-assessment.md
scripts/: check-feed-liveness.ts  gen-credentials.ts  tsconfig.json  validate-changed-feeds.ts
services/openlr-resolver/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
services/openlr-resolver/app/: __init__.py  __main__.py  frc_fow.py  matcher.py  models.py  reference.py  service.py
services/openlr-resolver/app/maps/: __init__.py  memory.py  postgis.py
services/openlr-resolver/scripts/: __init__.py  build_graph.py
services/openlr-resolver/tests/: conftest.py  test_build_graph.py  test_matcher.py  test_postgis_reader.py  test_service.py
services/openlr-resolver/tests/fixtures/: tiny_roads.osm
(+209 files in other folders)
