# Copyright the OpenConditions authors.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "openconditions-openlr-resolver"
version = "0.1.0"
description = "OpenLR -> OSM map-matching resolver service for OpenConditions"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi==0.138.1",
    "uvicorn[standard]==0.49.0",
    "openlr==1.0.1",
    "openlr-dereferencer==1.2.0",
    "shapely==2.1.2",
    "geographiclib==2.1",
    "psycopg[binary]==3.3.4",
    "psycopg-pool==3.3.1",
    "osmium==4.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "httpx==0.28.1",
]

[tool.setuptools]
packages = ["app", "app.maps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 105

[tool.ruff.lint]
select = ["E", "F", "W"]
# E402: module-level import not at top of file — intentional in test_postgis_reader.py
# where imports follow a try/except docker-availability guard.
ignore = ["E402"]
